2008-01-17  Christian Kellner  <gicmo@gnome.org>

	* common/gmountsource.c:
	* common/gmountsource.h:
	Make g_mount_source_ask_password_async () public and add
	g_mount_source_ask_password_finish (). 

	* daemon/gvfsbackenddav.c: 
	Use g_mount_source_ask_password_async instead of the sync
	version so we don't hang during auth. Few cleanups.

	* programs/gvfs-mount.c: 
	Don't echo the password, if possible.

2008-01-17  Alexander Larsson  <alexl@redhat.com>

        * hal/ghalvolume.c:
        * hal/ghalvolumemonitor.c:
	Initial work on LUKS, from david.

2008-01-17  Alexander Larsson  <alexl@redhat.com>

        * common/gvfsdaemonprotocol.h:
        * client/gdaemonfile.c:
	Add upload operation (requires latest glib)
	
        * daemon/gvfsbackend.[ch]:
        * daemon/gvfsjobupload.[ch]: Added.
	Implement upload in daemon
	
        * daemon/Makefile.am:
        * daemon/burn.mount.in: Added.
        * daemon/gvfsbackendburn.[ch]: Added.
	Added initial burn:/// implementation.
	Not fully implemented, but read works.
	
        * daemon/gvfsbackendcomputer.c:
	Ensure we set right mimetype for dirs

2008-01-16  Christian Kellner  <gicmo@gnome.org>

	* daemon/gvfsbackenddav.c:	
	* daemon/gvfsbackendhttp.c:
	* daemon/gvfsbackendhttp.h:
	A few cleanups.

2008-01-16  Christian Kellner  <gicmo@gnome.org>

	* daemon/gvfsbackenddav.c: 
	* daemon/gvfsbackendhttp.c:
	* daemon/gvfsbackendhttp.h:
	* daemon/soup-input-stream.c:
	* daemon/soup-output-stream.c:
	Port to libsoup-2.4.

	* configure.ac:
	* daemon/Makefile.am:
	Make building of http optional (and depend on wether
	libsoup is found or not)
	Patch from Dan Winship.

2008-01-16  Frederic Crozat  <fcrozat@mandriva.com>

	* Makefile.am: Only build hal module when hal support is
	enabled (#509693).

2008-01-15  Alexander Larsson  <alexl@redhat.com>

        * client/gdaemonfile.c:
        * daemon/daemon-main.c:
        * daemon/gvfsbackendcdda.c:
        * daemon/gvfsbackendcomputer.c:
        * daemon/gvfsbackendftp.c: